Working on showing tables in server view